--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1>hello</h1>
+<!-- This code is more of a birthday gift, feel free to use and replace some text. I had some other ideas, but I couldn't figure how to place them. I will one day learn about flexboxes or better ways to position with CSS.-->
+  <header>
+		<h1>Happy Birthday MyatPhone Thazin</h1>
+	</header>
+
+	<div>
+    <p class="summary"><i>Date:</i> Apirl 6th, 2021</p>
+	</div>
+
+	<div class="container">
+		<div class="flame"></div>
+		<div class="wick"></div>
+		<div class="candle"></div>
+		<div class="top box"></div>
+		<div class="top stripe"></div>
+		<div class="mid box"></div>
+		<div class="mid stripe"></div>
+		<div class="bottom box"></div>
+		<div class="bottom stripe"></div>
+		<div class="miggy">Happy Birthday MyatPhone!</div>
+	</div>
+<!-- For Miggy From Charla-->
+	<div>
+		<p class="clearfix">To my MyatPhone.We know each other since 5years ago.Thank you for being with me all the time.I hope you have a grete birthday.aishiteru :)) </p>
+		<br>
+		<p class="right">your zuki!</p>
+    <br><br><br><br>
+    <p>Here is the gift<a href="zuki.html">  click !</a></p>
+	</div>
