--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<!-- This code is more of a birthday gift, feel free to use and replace some text. I had some other ideas, but I couldn't figure how to place them. I will one day learn about flexboxes or better ways to position with CSS.-->
+<html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="index.css">
+	</head>
+	<body>
   <header>
 		<h1>Happy Birthday MyatPhone Thazin</h1>
 	</header>
@@ -19,7 +23,6 @@
 		<div class="bottom stripe"></div>
 		<div class="miggy">Happy Birthday MyatPhone!</div>
 	</div>
-<!-- For Miggy From Charla-->
 	<div>
 		<p class="clearfix">To my MyatPhone.We know each other since 5years ago.Thank you for being with me all the time.I hope you have a grete birthday.aishiteru :)) </p>
 		<br>
@@ -27,3 +30,5 @@
     <br><br><br><br>
     <p>Here is the gift<a href="zuki.html">  click !</a></p>
 	</div>
+	</body>
+</html>
