--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
   <header>
-		<h1>Happy Birthday MyatPhone Thazin</h1>
+	  <center><h1>Happy Birthday MyatPhone Thazin</h1></center>
 	</header>
 
 	<div>
