--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="mid stripe"></div>
 		<div class="bottom box"></div>
 		<div class="bottom stripe"></div>
-		<div class="miggy">   Happy Birthday MyatPhone!</div>
+		<div class="miggy"><center>Happy Birthday MyatPhone!</center></div>
 	</div>
 	<div>
 		<p class="clearfix">To my MyatPhone.We know each other since 5years ago.Thank you for being with me all the time.I hope you have a grete birthday.aishiteru :)) </p>
