--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<br>
 		<p class="right">your zuki!</p>
     <br><br><br><br>
-    <p>Here is the gift<a href="zuki.html">  click !</a></p>
+    <p>Here is the gift<a href="secondpage.html">  click !</a></p>
 	</div>
 	</body>
 </html>
