--- a/secondpage.html
+++ b/secondpage.html
@@ -1,3 +1,8 @@
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <title>Gift</title>
+    </head>
 <div id="card">
     <div id="card-inside">
       <div class="wrap">
