--- a/secondpage.html
+++ b/secondpage.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="secondpage.css">
+        <link rel="stylesheet" type="text/css" href="secpage.css">
         <title>Gift</title>
     </head>
 <div id="card">
