--- a/secondpage.html
+++ b/secondpage.html
@@ -3,6 +3,9 @@
         <link rel="stylesheet" type="text/css" href="secpage.css">
         <title>Gift</title>
     </head>
+    <body>
+        <script src="secpage.js">
+</script>
 <div id="card">
     <div id="card-inside">
       <div class="wrap">
@@ -27,3 +30,5 @@
       <button id="close">&lt;</button>
     </div>
   </div>
+    </body>
+</html>
