--- a/secondpage.html
+++ b/secondpage.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="secpage.css">
-        <script type="text/javascript" src="secpage.js"></script>
+        <script type="text/javascript" src=secpage.js></script>
         <title>Gift</title>
     </head>
     <body>
