--- a/secondpage.html
+++ b/secondpage.html
@@ -22,7 +22,7 @@
 
     <div id="card-front">
       <div class="wrap">
-        <h1>Happy Birthday!</h1>
+        <h1>Birthday Gift!</h1>
       </div>
       <button id="open">&gt;</button>
       <button id="close">&lt;</button>
