--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</div>
 		<br></br></br>
 	<div>
-		<p class="clearfix">To my MyatPhone.We know each other since 5years ago.Thank you for being with me all the time.I hope you have a grete birthday.aishiteru :)) </p>
+		<p class="clearfix">To my MyatPhone.We know each other since 5years ago.Thank you for being with me all the time.I hope you have a great birthday.aishiteru :)) </p>
 		<br>
 		<p class="right">your zuki!</p>
     <br><br><br><br>
