--- a/secondpage.html
+++ b/secondpage.html
@@ -6,18 +6,7 @@
     <body>
 <div id="card">
     <div id="card-inside">
-      <div class="wrap">
-        <p>Hey son,</p>
-        <p>I lost the message inside the card 2 times.. and i realsied i am slow at this :'( </p>
-        <p>Listen kid, I want you to be the happiest today.. and i suck at making people happy..This is probably the only gift i can give you, my word..</p>
-        <p>I will be there with you in your heart and soul whenever you seek me.
-          I love you.
-        </p>
-        <p>always.</p>
-        <p><a href="http://pandey47.0fees.us/index4.html">NEXT</a></p>
-        <p class="signed">ZEF</p>
-        
-      </div>
+        <p>I will give u Netflix premium account or Today account when internet restore</p>
     </div>
 
     <div id="card-front">
