--- a/secondpage.html
+++ b/secondpage.html
@@ -6,7 +6,7 @@
     <body>
 <div id="card">
     <div id="card-inside">
-        <p>I will give u Netflix premium account or Today account when internet restore</p>
+        <p>I will give u Netflix premium account or Todai account when internet restore</p>
     </div>
 
     <div id="card-front">
