--- a/secondpage.html
+++ b/secondpage.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" type="text/css" href="secpage.css">
         <title>Gift</title>
     </head>
-    <body>
+    <body><br><br>
 <div id="card">
     <div id="card-inside">
         <p>I will give u Netflix premium account or Todai account when internet restore</p>
