--- a/secondpage.html
+++ b/secondpage.html
@@ -3,10 +3,10 @@
         <link rel="stylesheet" type="text/css" href="secpage.css">
         <title>Gift</title>
     </head>
-    <body><br><br>
+    <body>
 <div id="card">
     <div id="card-inside">
-        <p>I will give u Netflix premium account or Todai account when internet restore</p>
+        <p><b>I will give u Netflix premium account or Todai account when internet restore</b></p>
     </div>
 
     <div id="card-front">
