--- a/secondpage.html
+++ b/secondpage.html
@@ -6,7 +6,7 @@
     <body>
 <div id="card">
     <div id="card-inside">
-        <p><b><big>I will give u Netflix premium account or Todai account when internet restore</big></b></p>
+        <p><b><big>I will give u Netflix premium account & Todai account when internet restore</big></b></p>
     </div>
 
     <div id="card-front">
